# mt5-crm

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
app/: __init__.py  main.py
app/core/: audit.py  audit_middleware.py  config.py  database.py  errors.py
app/modules/admin/: __init__.py  bootstrap.py  models.py  router.py  schemas.py
app/modules/auth/: dependencies.py  router.py  schemas.py  security.py
app/modules/crm/: models.py  router.py  schemas.py
app/static/: app.js  index.html  styles.css
docs/: data-field-map.md  development-task-list.md  mt5-crm-feature-inventory.md  python-mysql-technical-route.md
migrations/: env.py
migrations/versions/: 20260613_0001_create_admin_auth_tables.py  20260613_0002_seed_permission_tree.py  20260613_0003_create_operation_logs.py  20260613_0004_create_crm_users.py  20260613_0005_add_crm_user_mt5_fields.py
scripts/: create_initial_admin.py
tests/: test_health.py
tests/auth/: test_admin_bootstrap.py  test_auth_permissions.py
tests/core/: test_alembic_config.py  test_audit.py  test_config.py  test_database.py
tests/crm/: test_crm_users.py
